# AudioPlayer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Application.h  AudioPlayerComponent.h  MainWindow.h
src/: Application.cpp  AudioPlayerComponent.cpp  Main.cpp  MainWindow.cpp
